# Spiderman

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xueqiya/spiderman/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_xueqiya_spiderman_FFmpeg.c  com_xueqiya_spiderman_FFmpeg.h
app/src/main/cpp/include/libavcodec/: avcodec.h  avfft.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  dirac.h  packet.h  qsv.h  vdpau.h  version.h  videotoolbox.h
app/src/main/cpp/include/libavdevice/: avdevice.h  version.h
app/src/main/cpp/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h  version.h
app/src/main/cpp/include/libavutil/: ffversion.h  intreadwrite.h  pixfmt.h  video_enc_params.h  video_hint.h
app/src/main/cpp/include/libpostproc/: postprocess.h  version.h
app/src/main/cpp/include/libswresample/: swresample.h  version.h
app/src/main/cpp/include/libswscale/: swscale.h  version.h
app/src/main/java/com/xueqiya/spiderman/: FFmpeg.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xueqiya/spiderman/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
